# Frontal-Profile-Face-Classify

./: .gitignore  README.md  conda_env.yaml
Ncnn_infer/: .gitignore  CMakeLists.txt  fp.cc  fp.h  fp.mem.h  main.cpp  quality_assessment.cc  quality_assessment.h  quality_assessment.id.h  quality_assessment.mem.h  test.cpp
Scripts/: DataAugment.py  DataDivision.py  PrepareData.py  Test.py  Train.py  tf2-onnx-ncnn-cmd.txt  tf2onnx-cmd.txt
Scripts/model/: LoadData.py
